--- a/code/ModelSelction.Rmd
+++ b/code/ModelSelction.Rmd
@@ -8,14 +8,13 @@ output: html_document
 ```{r}
 
 companies <- read.csv("../data/indian_companies_transformed.csv", skipNul = TRUE)
-data = companies[, c("logREVIEWS", "logRATING", "logBRANCHES", "YEARS.OLD", "INDUSTRY", "INDIA.HQ", "TOTAL_EMPLOYEES", "logPACKAGE")]
 data$INDUSTRY = factor(data$INDUSTRY)
 data$INDIA.HQ = factor(data$INDIA.HQ)
 
 ```
 
 ```{r}
-lmod = lm(logPACKAGE ~ ., data)
+lmod = lm(PACKAGE ~ ., data)
 summary(lmod)
 ```
 
@@ -28,7 +27,7 @@ Now, checking for multicoliearity using correlation matrix and calculating Condi
 ```{r}
 
 X = model.matrix(lmod)
-cat_vars = c("YEARS.OLD","logRATING","logREVIEWS","logBRANCHES","TOTAL_EMPLOYEES")
+cat_vars = c("YEARS.OLD","RATING","REVIEWS","BRANCHES","TOTAL_EMPLOYEES")
 pairs(data[cat_vars], labels = cat_vars, main="Pairwise scatter plot of data")
 cat("Correlation Matrix:\n")
 cor(X[, c(2, 19, 20, 21, 22)])
@@ -42,7 +41,7 @@ p = dim(X)[2]
 
 XtX = t(X)%*%X
 lambda = eigen(XtX)$values
-cat("\u03BB =", lambda)
+cat("\u03BB =", lambda, "\n")
 
 K = sqrt(lambda[1]/lambda[p])
 cat("Condition number is given by K = ", K)
@@ -66,8 +65,8 @@ As the number of parameters p<<n, a balanced criterion is required to balance pr
 
 ```{r warning=FALSE}
 
-null = lm(logPACKAGE ~ 1, na.omit(data))
-full = lm(logPACKAGE ~ ., na.omit(data))
+null = lm(PACKAGE ~ 1, na.omit(data))
+full = lm(PACKAGE ~ ., na.omit(data))
 out = step(null, scope = list(lower=~1, upper=formula(full)), direction = "both", trace = FALSE)
 cat("Order of parameters: ",out$anova[,1])
 ```
@@ -82,7 +81,7 @@ Looking at the AIC vs Index plot, we see that AIC remains almost constant after 
 
 ```{r}
 out = step(null, scope = list(lower=~1, upper=formula(full)), direction = "both", k=log(n), trace = FALSE)
-cat("Order of parameters:", out$anova[,1])
+cat("Order of parameters:", out$anova[,1], "\n")
 cat("Adjusted R-squared: ", summary(out)$adj.r.squared)
 ```
 
@@ -100,7 +99,7 @@ Industry = IT Services & Consulting
 
 ```{r echo=FALSE }
 
-x_new = data.frame(logREVIEWS = log(10000), logBRANCHES = log(5), logRATING=log(3),
+x_new = data.frame(REVIEWS = log(5000), BRANCHES = log(5), RATING=log(3),
                    INDIA.HQ=factor("Bangalore / Bengaluru", levels = levels(data$INDIA.HQ)), 
                    INDUSTRY=factor("IT Services & Consulting", levels = levels(data$INDUSTRY)))
 
@@ -117,7 +116,7 @@ Industry = Education & Training
 
 ```{r echo=FALSE}
 
-x_new = data.frame(logREVIEWS = log(10000), logBRANCHES = log(5), logRATING=log(3),
+x_new = data.frame(REVIEWS = log(5000), BRANCHES = log(5), RATING=log(3),
                    INDIA.HQ=factor("Bangalore / Bengaluru", levels = levels(data$INDIA.HQ)), 
                    INDUSTRY=factor("Education & Training", levels = levels(data$INDUSTRY)))
 
