--- a/code/Diagnostics.Rmd
+++ b/code/Diagnostics.Rmd
@@ -130,7 +130,7 @@ Removing Outliers that are not influential points.
 ```{r echo=FALSE}
 idx = id_jack[!(id_jack %in% id_cook)]
 transformed_data = data[-idx, ]
-write.csv(df, "indian_companies_transformed.csv", row.names = TRUE)
+write.csv(transformed_data, "indian_companies_transformed.csv", row.names = TRUE)
 
 
 lmod_final = lm(PACKAGE ~ YEARS.OLD + INDUSTRY + INDIA.HQ + TOTAL_EMPLOYEES + BRANCHES + I(RATING^2) + REVIEWS, transformed_data)
