--- a/code/ModelSelction.Rmd
+++ b/code/ModelSelction.Rmd
@@ -7,14 +7,14 @@ output: html_document
 
 ```{r}
 
-companies <- read.csv("../data/indian_companies_transformed.csv", skipNul = TRUE)
-data$INDUSTRY = factor(data$INDUSTRY)
-data$INDIA.HQ = factor(data$INDIA.HQ)
+comp <- read.csv("../data/indian_companies_transformed.csv", skipNul = TRUE)
+comp$INDUSTRY = factor(comp$INDUSTRY)
+comp$INDIA.HQ = factor(comp$INDIA.HQ)
 
 ```
 
 ```{r}
-lmod = lm(PACKAGE ~ YEARS.OLD + INDUSTRY + INDIA.HQ + TOTAL_EMPLOYEES + BRANCHES + I(RATING^2) + REVIEWS, data)
+lmod = lm(PACKAGE ~ YEARS.OLD + INDUSTRY + INDIA.HQ + TOTAL_EMPLOYEES + BRANCHES + RATING + I(RATING^2) + REVIEWS, comp)
 summary(lmod)
 ```
 
@@ -28,9 +28,9 @@ Now, checking for multicoliearity using correlation matrix and calculating Condi
 
 X = model.matrix(lmod)
 cat_vars = c("YEARS.OLD","RATING","REVIEWS","BRANCHES","TOTAL_EMPLOYEES")
-pairs(data[cat_vars], labels = cat_vars, main="Pairwise scatter plot of data")
+pairs(comp[cat_vars], labels = cat_vars, main="Pairwise scatter plot of comp")
 cat("Correlation Matrix:\n")
-cor(X[, c(2, 19, 20, 21, 22)])
+cor(X[, cat_vars])
 
 ```
 
@@ -65,9 +65,8 @@ As the number of parameters p<<n, a balanced criterion is required to balance pr
 
 ```{r warning=FALSE}
 
-null = lm(PACKAGE ~ 1, na.omit(data))
-full = lm(PACKAGE ~ ., na.omit(data))
-out = step(null, scope = list(lower=~1, upper=formula(full)), direction = "both", trace = FALSE)
+null = lm(PACKAGE ~ 1, na.omit(comp))
+out = step(null, scope = list(lower=~1, upper=formula(lmod)), direction = "both", trace = FALSE)
 cat("Order of parameters: ",out$anova[,1])
 ```
 
@@ -80,7 +79,7 @@ plot(out$anova[,6], xlab="Number of Params", ylab="AIC", main="AIC vs p")
 Looking at the AIC vs Index plot, we see that AIC remains almost constant after 4. Replacing AIC with more strict criterion, BIC.
 
 ```{r}
-out = step(null, scope = list(lower=~1, upper=formula(full)), direction = "both", k=log(n), trace = FALSE)
+out = step(null, scope = list(lower=~1, upper=formula(lmod)), direction = "both", k=log(n), trace = FALSE)
 cat("Order of parameters:", out$anova[,1], "\n")
 cat("Adjusted R-squared: ", summary(out)$adj.r.squared)
 summary(out)
@@ -94,15 +93,15 @@ Lets take examples of Indian companies with:
   
 Number of Reviews = 10000 (popular)  
 Rating = 3 (average)   
-Branches = 5   
+Branches = 4   
 Headquarter = Bangalore / Bengaluru  
-Industry = IT Services & Consulting
+Industry = Software Product
 
 ```{r echo=FALSE }
-
-x_new = data.frame(REVIEWS = log(5000), BRANCHES = log(5), RATING=log(3),
-                   INDIA.HQ=factor("Bangalore / Bengaluru", levels = levels(data$INDIA.HQ)), 
-                   INDUSTRY=factor("IT Services & Consulting", levels = levels(data$INDUSTRY)))
+mean_rating = 3.746872
+x_new = data.frame(REVIEWS = log(10000), BRANCHES = log(4), RATING=log(3)-log(mean_rating),
+                   INDIA.HQ=factor("Bangalore / Bengaluru", levels = levels(comp$INDIA.HQ)), 
+                   INDUSTRY=factor("Software Product", levels = levels(comp$INDUSTRY)))
 
 y = predict(out, newdata = x_new)
 cat("Average monthly package predicted: ", round(exp(y), 2), "L")
@@ -111,15 +110,15 @@ cat("Average monthly package predicted: ", round(exp(y), 2), "L")
 
 Number of Reviews = 10000 (popular)    
 Rating = 3 (average)    
-Branches = 5   
+Branches = 4   
 Headquarter = Bangalore / Bengaluru  
 Industry = Education & Training  
 
 ```{r echo=FALSE}
 
-x_new = data.frame(REVIEWS = log(5000), BRANCHES = log(5), RATING=log(3),
-                   INDIA.HQ=factor("Bangalore / Bengaluru", levels = levels(data$INDIA.HQ)), 
-                   INDUSTRY=factor("Education & Training", levels = levels(data$INDUSTRY)))
+x_new = data.frame(REVIEWS = log(10000), BRANCHES = log(4), RATING=log(3)-log(mean_rating),
+                   INDIA.HQ=factor("Bangalore / Bengaluru", levels = levels(comp$INDIA.HQ)), 
+                   INDUSTRY=factor("Education & Training", levels = levels(comp$INDUSTRY)))
 
 y = predict(out, newdata = x_new)
 cat("Average monthly package predicted: ", round(exp(y), 2), "L")
