--- a/code/Diagnostics.Rmd
+++ b/code/Diagnostics.Rmd
@@ -1,6 +1,8 @@
 ---
 title: "Diagnostics"
-output: html_document
+output:
+  html_document: default
+  pdf_document: default
 date: "2025-12-05"
 ---
 
